melior/src/dialect/llvm/snapshots/melior__dialect__llvm__tests__compile_extract_value.snap
---
source: melior/src/dialect/llvm/mod.rs
expression: module.as_operation()
---
module {
  llvm.func @foo(%arg0: !llvm.struct<(i64)>) {
    %0 = llvm.extractvalue %arg0[0] : !llvm.struct<(i64)> 
    llvm.return
  }
}
