melior/src/dialect/llvm/snapshots/melior__dialect__llvm__tests__compile_return.snap
---
source: melior/src/dialect/llvm/mod.rs
expression: module.as_operation()
---
module {
  llvm.func @foo_none() {
    llvm.return
  }
  llvm.func @foo(%arg0: !llvm.struct<(i64)>) -> !llvm.struct<(i64)> {
    llvm.return %arg0 : !llvm.struct<(i64)>
  }
}
