melior/src/dialect/llvm/snapshots/melior__dialect__llvm__tests__compile_zext.snap
---
source: melior/src/dialect/llvm/mod.rs
expression: module.as_operation()
---
module {
  llvm.func @foo(%arg0: i64) -> i128 {
    %0 = llvm.zext %arg0 : i64 to i128
    llvm.return %0 : i128
  }
}
